--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <jxl.version>2.6.12</jxl.version>
     <extentreports.version>5.0.1</extentreports.version>
     <apache.commons.version>3.11</apache.commons.version>
+    <apache.poi.version>4.1.2</apache.poi.version>
     <commons.io.version>2.8.0</commons.io.version>
   </properties>
 
@@ -57,6 +58,17 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>${apache.commons.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>${apache.poi.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>${apache.poi.version}</version>
     </dependency>
   </dependencies>
 
